@@ -11,6 +11,10 @@ import java.sql.DriverManager;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.Statement;
+import java.text.SimpleDateFormat;
+import java.util.Arrays;
+import java.util.Date;
+import java.util.List;
 
 /**
  *
@@ -49,42 +53,50 @@ public class MySQL {
         return pstmt.executeQuery();
     }
 
-    public static Connection getConnection() {
-        try {
-            if (connection == null) {
-                Class.forName("com.mysql.cj.jdbc.Driver");
-                connection = DriverManager.getConnection("jdbc:mysql://localhost:3306/" + DATABASE, USERNAME, PASSWORD);
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return connection;
-    }
-    
     public static boolean backupDatabase() {
-        // Get the Downloads folder path
         String userHome = System.getProperty("user.home");
         String downloadFolder = userHome + File.separator + "Downloads";
-        String backupFilePath = downloadFolder + File.separator + "canteen_db_backup.sql";
+        // Generate timestamp-based filename
+        String timestamp = new SimpleDateFormat("yyyy-MM-dd_HH-mm-ss").format(new Date());
+        String backupFilePath = downloadFolder + File.separator + "canteen_db_backup_" + timestamp + ".sql";
 
-        // Construct the mysqldump command
-        String command = String.format("mysqldump -u%s -p%s %s -r %s", USERNAME, PASSWORD, DATABASE, backupFilePath);
+        String mysqlBinPath = findMySQLDumpPath();
+        if (mysqlBinPath == null) {
+            System.err.println("mysqldump not found. Ensure MySQL is installed and added to PATH.");
+            return false;
+        }
+
+        List<String> command = Arrays.asList(
+            mysqlBinPath, "-u" + USERNAME, "-p" + PASSWORD, DATABASE, "-r", backupFilePath
+        );
 
         try {
-            // Execute the command
-            Process process = Runtime.getRuntime().exec(command);
-
-            // Wait for the process to complete
+            ProcessBuilder processBuilder = new ProcessBuilder(command);
+            processBuilder.redirectErrorStream(true);
+            Process process = processBuilder.start();
             int processComplete = process.waitFor();
-
-            if (processComplete == 0) {
-                return true;
-            } else {
-                return false;
-            }
+            return processComplete == 0;
         } catch (IOException | InterruptedException e) {
             e.printStackTrace();
             return false;
         }
+    }
+
+    private static String findMySQLDumpPath() {
+        String[] possiblePaths = {
+            "C:\\Program Files\\MySQL\\MySQL Server 8.0\\bin\\mysqldump.exe",
+            "C:\\Program Files (x86)\\MySQL\\MySQL Server 8.0\\bin\\mysqldump.exe",
+            "C:\\xampp\\mysql\\bin\\mysqldump.exe", // For XAMPP installations
+            "/usr/bin/mysqldump",  // Linux/macOS
+            "/usr/local/mysql/bin/mysqldump"
+        };
+
+        for (String path : possiblePaths) {
+            if (new File(path).exists()) {
+                return path;
+            }
+        }
+
+        return null;
     }
 }
